Tue Dec 21 17:15:24 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_tree.c: try to fix #143342 in gam_tree_get_children if
	  tree and root are NULL.

Mon Dec  6 13:54:11 CET 2004 Daniel Veillard <veillard@redhat.com>

	* NEWS doc/gamin.html doc/news.html: updated and rebuilt pages.

Fri Dec  3 16:39:35 CET 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.19

Fri Dec  3 16:10:03 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/Makefile.am server/gam_debug_lists.c: adding our own
	  reduced version of glib glist.c with simplified memory allocation
	  and poisonning of deleted list nodes to chase #132354.
	* server/gam_connection.c server/gam_node.c server/gam_poll.c:
	  more review and simplifiction of the use of GList APIs.

Fri Dec  3 12:10:50 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c server/gam_node.c server/gam_poll.c
	  server/gam_tree.c: avoid gam_node_append as it is O(n)

Thu Dec  2 18:46:09 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c server/gam_listener.c server/gam_server.c
	  server/gam_subscription.c: fixed compilation without debug

Thu Dec  2 01:17:09 CET 2004 Daniel Veillard <veillard@redhat.com>

	* autogen.sh: removed reference to old m4 subdir
	* server/gam_connection.c server/gam_listener.[ch]
	  server/gam_subscription.[ch]: extend debugging to add listeners
	  and all subscription states from a given connection.

Wed Dec  1 15:26:20 CET 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated
	* configure.in: minor change for compiler options
	* lib/gam_error.[ch] libgamin/gam_api.c server/gam_connection.[ch]
	  server/gam_server.[ch]: trying to improve debugging

Fri Nov 26 11:01:19 CET 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: real release of 0.0.18
	* libgamin/gam_api.c: (FAMPending): only select/read
	  when we don't have a complete event in the buffer.