@@ -1,3 +1,8 @@
+Wed Jan  5 16:46:15 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_poll.c: patch from Frederic Crozat to add poll only
+	  support (helps with valgrind debugging).
+
 Tue Dec 21 17:15:24 CET 2004 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_tree.c: try to fix #143342 in gam_tree_get_children if
